[gd_scene load_steps=3 format=2]

[ext_resource path="res://Enemies/player_detection_zone.gd" type="Script" id=1]

[sub_resource type="CircleShape2D" id=1]
radius = 60.0

[node name="player_detection_zone" type="Area2D"]
collision_layer = 0
collision_mask = 2
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="cooldown_timer" type="Timer" parent="."]
autostart = true

[connection signal="body_entered" from="." to="." method="_on_player_detection_zone_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_player_detection_zone_body_exited"]
[connection signal="timeout" from="cooldown_timer" to="." method="_on_Timer_timeout"]
